# PredictiveAwarenessExperiments

./: .gitmodules  CMakeLists.txt  README.md  package.xml
conf/: KL_Cost.yaml
conf/costfn/: KL.yaml
conf/mppi/: JackalHalton.yaml  jackal.yaml
conf/obstacles/: MovingPointObstacles.yaml  Test.yaml
launch/: KL_Cost.launch  Multi_Jackal.launch
msg/: Obstacle.msg  ObstacleArray.msg
rviz/: RVIZ_plus.rviz
src/PredicionModels/: ConstantVel.py  GoalOrientedPredictions.py  Goal_weights.py  RationalAction.py  utils.py
src/control/: KL_CostController.py
src/costfn/: Entropy_Cost.py  KL.py
src/interface/: InterfacePlus.py
src/obstacles/: ReactiveObstaclesController.py  moving_obstacles.py
src/planner/: MPPI_wrapper.py  mppi.py
src/utils/: KL_order.py  PlanVisualizer.py  config_store.py  plans_Entropy.npy  plans_KL.npy  plans_KL2.npy  plotter.py  tests.py
